--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/images/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Profile card component</title>
@@ -27,10 +27,10 @@
     </style> -->
   </head>
   <body>
-    <img class="top" src="./images/bg-pattern-top.svg" alt="top-image" />
+    <img class="top" src="./images/images/bg-pattern-top.svg" alt="top-image" />
     <img
       class="bottom"
-      src="./images/bg-pattern-bottom.svg"
+      src="./images/images/bg-pattern-bottom.svg"
       alt="bottom-image"
     />
     <div class="container">
@@ -38,7 +38,7 @@
         <div class="card-profile">
           <img
             class="user-image"
-            src="./images/image-victor.jpg"
+            src="./images/images/image-victor.jpg"
             alt="Victor Crest"
           />
         </div>
